...
            flex: 1,
            paddingTop: 0,
            paddingBottom: 0,
            textAlignVertical: 'center',
          },
        ]}
        placeholder={tag ? '' : 'Ask anything, or type /'}
        placeholderTextColor={colors.fg3}
        value={value}
        onChangeText={handleChangeText}
        onKeyPress={handleKeyPress}
        multiline
        blurOnSubmit={false}
...
